add search text filter to image filters
